RESOLVED FIXED 190015
[iOS] WKWebView callout bar is missing Change Writing Direction item
https://bugs.webkit.org/show_bug.cgi?id=190015
Summary [iOS] WKWebView callout bar is missing Change Writing Direction item
mitz
Reported 2018-09-26 15:26:46 PDT
When the insertion point, or a selection, is in editable text, and the paragraph writing direction is left-to-right and/or a left-to-right keyboard is active, then the callout bar should contain one of the actions {makeTextWritingDirectionRightToLeft:, makeTextWritingDirectionLeftToRight:} (depending on which is the current direction). This works in UIWebView but apparently not implemented at all in WKWebView.
Attachments
Patch (14.61 KB, patch)
2019-02-15 11:45 PST, Wenson Hsieh
thorton: review+
Patch for landing (14.84 KB, patch)
2019-02-15 12:44 PST, Wenson Hsieh
no flags
mitz
Comment 1 2018-09-26 15:28:09 PDT
mitz
Comment 2 2018-09-26 15:32:45 PDT
(In reply to mitz from comment #0) > and/or a left-to-right keyboard is active This should have said “right-to-left keyboard”.
Wenson Hsieh
Comment 3 2019-02-15 11:45:35 PST
Tim Horton
Comment 4 2019-02-15 11:54:00 PST
Comment on attachment 362138 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362138&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:2827 > + if (baseWritingDirection == WebCore::WritingDirection::LeftToRight && !UIKeyboardIsRightToLeftInputModeActive()) This confused me, you explained it ("active" should read "available" or something), it might need a comment.
Wenson Hsieh
Comment 5 2019-02-15 11:54:30 PST
(In reply to Tim Horton from comment #4) > Comment on attachment 362138 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=362138&action=review > > > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:2827 > > + if (baseWritingDirection == WebCore::WritingDirection::LeftToRight && !UIKeyboardIsRightToLeftInputModeActive()) > > This confused me, you explained it ("active" should read "available" or > something), it might need a comment. 👍
Wenson Hsieh
Comment 6 2019-02-15 12:44:36 PST
Created attachment 362147 [details] Patch for landing
WebKit Commit Bot
Comment 7 2019-02-15 13:35:09 PST
The commit-queue encountered the following flaky tests while processing attachment 362147 [details]: media/modern-media-controls/compact-media-controls/compact-media-controls-layout.html bug 194720 (author: graouts@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2019-02-15 13:35:57 PST
Comment on attachment 362147 [details] Patch for landing Clearing flags on attachment: 362147 Committed r241614: <https://trac.webkit.org/changeset/241614>
Note You need to log in before you can comment on or make changes to this bug.