Source/WebKit/Shared/EditorState.cpp
@@ -111,12 +111,13 @@ void EditorState::PostLayoutData::encode(IPC::Encoder& encoder) const
 #if PLATFORM(IOS_FAMILY) || PLATFORM(GTK)
     encoder << caretRectAtStart;
 #endif
-#if PLATFORM(IOS_FAMILY) || PLATFORM(MAC)
+#if PLATFORM(COCOA)
     encoder << focusedElementRect;
     encoder << selectedTextLength;
     encoder << textAlignment;
     encoder << textColor;
     encoder << enclosingListType;
+    encoder << baseWritingDirection;
 #endif
 #if PLATFORM(IOS_FAMILY)
     encoder << caretRectAtEnd;
@@ -153,7 +154,7 @@ bool EditorState::PostLayoutData::decode(IPC::Decoder& decoder, PostLayoutData& 
     if (!decoder.decode(result.caretRectAtStart))
         return false;
 #endif
-#if PLATFORM(IOS_FAMILY) || PLATFORM(MAC)
+#if PLATFORM(COCOA)
     if (!decoder.decode(result.focusedElementRect))
         return false;
     if (!decoder.decode(result.selectedTextLength))
@@ -163,6 +164,8 @@ bool EditorState::PostLayoutData::decode(IPC::Decoder& decoder, PostLayoutData& 
     if (!decoder.decode(result.textColor))
         return false;
     if (!decoder.decode(result.enclosingListType))
+        return false;
+    if (!decoder.decode(result.baseWritingDirection))
         return false;
 #endif
 #if PLATFORM(IOS_FAMILY)
@@ -264,7 +267,7 @@ TextStream& operator<<(TextStream& ts, const EditorState& editorState)
     if (editorState.postLayoutData().caretRectAtStart != IntRect())
         ts.dumpProperty("caretRectAtStart", editorState.postLayoutData().caretRectAtStart);
 #endif
-#if PLATFORM(IOS_FAMILY) || PLATFORM(MAC)
+#if PLATFORM(COCOA)
     if (editorState.postLayoutData().focusedElementRect != IntRect())
         ts.dumpProperty("focusedElementRect", editorState.postLayoutData().focusedElementRect);
     if (editorState.postLayoutData().selectedTextLength)
@@ -275,7 +278,9 @@ TextStream& operator<<(TextStream& ts, const EditorState& editorState)
         ts.dumpProperty("textColor", editorState.postLayoutData().textColor);
     if (editorState.postLayoutData().enclosingListType != NoList)
         ts.dumpProperty("enclosingListType", editorState.postLayoutData().enclosingListType);
-#endif
+    if (editorState.postLayoutData().baseWritingDirection != WebCore::WritingDirection::Natural)
+        ts.dumpProperty("baseWritingDirection", static_cast<uint8_t>(editorState.postLayoutData().baseWritingDirection));
+#endif // PLATFORM(COCOA)
 #if PLATFORM(IOS_FAMILY)
     if (editorState.postLayoutData().caretRectAtEnd != IntRect())
         ts.dumpProperty("caretRectAtEnd", editorState.postLayoutData().caretRectAtEnd);
